fixes on the html

--- a/index.html
+++ b/index.html
@@ -3,18 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <title>Map Infographic - Leaflet</title>
-  <link rel="stylesheet" href="style.css" />
-  <!-- Leaflet CSS -->
-<link 
-rel="stylesheet"
-href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-/>
+  
+  <!-- Leaflet CSS (no integrity, no crossorigin) -->
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+  />
 
-<!-- Leaflet JS -->
-<script
-src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-></script>
-<script src="script.js"></script>
+  <!-- Your custom CSS -->
+  <link rel="stylesheet" href="style.css" />
+
+  <!-- Leaflet JS (no integrity, no crossorigin) -->
+  <script
+    src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+  ></script>
+
+  <!-- Your custom JS -->
+  <script src="script.js"></script>
 </head>
 <body>
   <h1>Map Infographic (Leaflet)</h1>
